[package]
name = "nvim_upgrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bunt = "0.2.8"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["tokio-io"] }
indicatif = { version = "0.17.3", features = ["improved_unicode", "tokio"] }
join = "0.3.1"
once_cell = "1.17.1"
partial_application = "0.2.1"
reqwest = { version = "0.11.17", features = ["json", "stream"] }
semver = "1.0.17"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "fs"] }
